--- a/Entity matching-D.ipynb
+++ b/Entity matching-D.ipynb
@@ -118,17 +118,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -592,8 +592,8 @@
        "      <td>5333497</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17633</th>\n",
-       "      <td>17633</td>\n",
+       "      <th>17634</th>\n",
+       "      <td>17634</td>\n",
        "      <td>519</td>\n",
        "      <td>2500</td>\n",
        "      <td>Every Breath You Take (An Under Suspicion Novel) Hardcover – November 7, 2017</td>\n",
@@ -923,7 +923,7 @@
        "17604  17604       1829       2493   \n",
        "17621  17621       2453       2497   \n",
        "17626  17626       3190       2498   \n",
-       "17633  17633        519       2500   \n",
+       "17634  17634        519       2500   \n",
        "17638  17638        702       2502   \n",
        "17639  17639       1409       2502   \n",
        "17645  17645       1307       2561   \n",
@@ -986,7 +986,7 @@
        "17604                                                    The Andromeda Strain Paperback – January 24, 2017   \n",
        "17621                   The View from Rainshadow Bay (A Lavender Tides Novel) Paperback – January 23, 2018   \n",
        "17626                                           The Sirens of Titan: A Novel Paperback – September 8, 1998   \n",
-       "17633                        Every Breath You Take (An Under Suspicion Novel) Hardcover – November 7, 2017   \n",
+       "17634                        Every Breath You Take (An Under Suspicion Novel) Hardcover – November 7, 2017   \n",
        "17638                           Tom Clancy Line of Sight (A Jack Ryan Jr. Novel) Hardcover – June 12, 2018   \n",
        "17639                        Tom Clancy Point of Contact (A Jack Ryan Jr. Novel) Hardcover – June 13, 2017   \n",
        "17645                                       Romeo and Juliet (No Fear Shakespeare) Study Guide ed. Edition   \n",
@@ -1049,7 +1049,7 @@
        "17604                  Michael Crichton    1101974494   \n",
        "17621                     Colleen Coble     718085760   \n",
        "17626                     Kurt Vonnegut     385333498   \n",
-       "17633  Mary Higgins Clark Alafair Burke    150117164X   \n",
+       "17634  Mary Higgins Clark Alafair Burke    150117164X   \n",
        "17638                        Mike Maden     735215928   \n",
        "17639                        Mike Maden     735215863   \n",
        "17645               William Shakespeare    1586638459   \n",
@@ -1112,7 +1112,7 @@
        "17604                                                                     The Andromeda Strain (Paperback)   \n",
        "17621                                                                         The View from Rainshadow Bay   \n",
        "17626                                                                                  The Sirens of Titan   \n",
-       "17633                                                                                Every Breath You Take   \n",
+       "17634                                                                                Every Breath You Take   \n",
        "17638                                                                        Tom Clancy's Point of Contact   \n",
        "17639                                                                        Tom Clancy's Point of Contact   \n",
        "17645                                                                                       Romeo & Juliet   \n",
@@ -1175,7 +1175,7 @@
        "17604                           Crichton, Michael      99319519  \n",
        "17621                              Coble, Colleen     718085760  \n",
        "17626                              Vonnegut, Kurt       5333497  \n",
-       "17633            Alafair Burke Mary Higgins Clark    150117164X  \n",
+       "17634            Alafair Burke Mary Higgins Clark    150117164X  \n",
        "17638                                 Maden, Mike     525532099  \n",
        "17639                                 Maden, Mike     525532099  \n",
        "17645                        Shakespeare, William       4234482  \n",
@@ -1239,17 +1239,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -1665,8 +1665,8 @@
        "      <td>1101985380</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15332</th>\n",
-       "      <td>15332</td>\n",
+       "      <th>15339</th>\n",
+       "      <td>15339</td>\n",
        "      <td>847</td>\n",
        "      <td>2187</td>\n",
        "      <td>Order to Kill: A Novel (A Mitch Rapp Novel) Mass Market Paperback – July 18, 2017</td>\n",
@@ -1857,8 +1857,8 @@
        "      <td>345539990</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16770</th>\n",
-       "      <td>16770</td>\n",
+       "      <th>16779</th>\n",
+       "      <td>16779</td>\n",
        "      <td>2220</td>\n",
        "      <td>2371</td>\n",
        "      <td>The City of Brass: A Novel (The Daevabad Trilogy) Hardcover – November 14, 2017</td>\n",
@@ -1989,8 +1989,8 @@
        "      <td>718085760</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17633</th>\n",
-       "      <td>17633</td>\n",
+       "      <th>17634</th>\n",
+       "      <td>17634</td>\n",
        "      <td>519</td>\n",
        "      <td>2500</td>\n",
        "      <td>Every Breath You Take (An Under Suspicion Novel) Hardcover – November 7, 2017</td>\n",
@@ -2040,7 +2040,7 @@
        "...      ...        ...        ...   \n",
        "15183  15183       1713       2157   \n",
        "15308  15308       1174       2181   \n",
-       "15332  15332        847       2187   \n",
+       "15339  15339        847       2187   \n",
        "15499  15499        710       2198   \n",
        "15506  15506        564       2201   \n",
        "15560  15560       1515       2205   \n",
@@ -2056,7 +2056,7 @@
        "16560  16560        378       2341   \n",
        "16601  16601         37       2342   \n",
        "16753  16753       1225       2368   \n",
-       "16770  16770       2220       2371   \n",
+       "16779  16779       2220       2371   \n",
        "16868  16868        192       2382   \n",
        "16902  16902        486       2386   \n",
        "17003  17003        412       2411   \n",
@@ -2067,7 +2067,7 @@
        "17406  17406         95       2462   \n",
        "17577  17577        825       2489   \n",
        "17621  17621       2453       2497   \n",
-       "17633  17633        519       2500   \n",
+       "17634  17634        519       2500   \n",
        "\n",
        "                                                                                               ltable_Name  \\\n",
        "2                                  Death's End (Remembrance of Earth's Past) Paperback – September 5, 2017   \n",
@@ -2103,7 +2103,7 @@
        "...                                                                                                    ...   \n",
        "15183                     Silence Fallen (A Mercy Thompson Novel) Mass Market Paperback – January 30, 2018   \n",
        "15308                                                    Final Girls: A Novel Paperback – January 23, 2018   \n",
-       "15332                    Order to Kill: A Novel (A Mitch Rapp Novel) Mass Market Paperback – July 18, 2017   \n",
+       "15339                    Order to Kill: A Novel (A Mitch Rapp Novel) Mass Market Paperback – July 18, 2017   \n",
        "15499     Metro 2033: First U.S. English edition (METRO by Dmitry Glukhovsky) Paperback – January 17, 2013   \n",
        "15506                                        The Lady of the Lake (The Witcher) Paperback – March 14, 2017   \n",
        "15560                                      No Game No Life, Vol. 6 - light novel Paperback – July 25, 2017   \n",
@@ -2119,7 +2119,7 @@
        "16560                                 Year One: Chronicles of the One, Book 1 Hardcover – December 5, 2017   \n",
        "16601                                                       The Light We Lost Paperback – February 6, 2018   \n",
        "16753            The Grave's a Fine and Private Place: A Flavia de Luce Novel Hardcover – January 30, 2018   \n",
-       "16770                      The City of Brass: A Novel (The Daevabad Trilogy) Hardcover – November 14, 2017   \n",
+       "16779                      The City of Brass: A Novel (The Daevabad Trilogy) Hardcover – November 14, 2017   \n",
        "16868  Darker: Fifty Shades Darker as Told by Christian (Fifty Shades of Grey) Paperback – November 28,...   \n",
        "16902                                              My Husband's Wife: A Novel Paperback – October 31, 2017   \n",
        "17003                                 To Be Where You Are (A Mitford Novel) Hardcover – September 19, 2017   \n",
@@ -2130,7 +2130,7 @@
        "17406                   The Nature of the Beast: A Chief Inspector Gamache Novel Paperback – July 26, 2016   \n",
        "17577                                    Deep Freeze (A Virgil Flowers Novel) Hardcover – October 17, 2017   \n",
        "17621                   The View from Rainshadow Bay (A Lavender Tides Novel) Paperback – January 23, 2018   \n",
-       "17633                        Every Breath You Take (An Under Suspicion Novel) Hardcover – November 7, 2017   \n",
+       "17634                        Every Breath You Take (An Under Suspicion Novel) Hardcover – November 7, 2017   \n",
        "\n",
        "                                      ltable_Author ltable_ISBN10  \\\n",
        "2                                         Cixin Liu     765386631   \n",
@@ -2166,7 +2166,7 @@
        "...                                             ...           ...   \n",
        "15183                               Patricia Briggs     425281280   \n",
        "15308                                   Riley Sager    1101985380   \n",
-       "15332                        Vince Flynn Kyle Mills    1476783497   \n",
+       "15339                        Vince Flynn Kyle Mills    1476783497   \n",
        "15499                             Dmitry Glukhovsky    1481845705   \n",
        "15506                Andrzej Sapkowski David French    031627383X   \n",
        "15560                                    Yuu Kamiya     316385263   \n",
@@ -2182,7 +2182,7 @@
        "16560                                  Nora Roberts    1250122953   \n",
        "16601                                Jill Santopolo     735212767   \n",
        "16753                                  Alan Bradley     345539990   \n",
-       "16770                              S. A Chakraborty      62678108   \n",
+       "16779                              S. A Chakraborty      62678108   \n",
        "16868                                     E L James     385543913   \n",
        "16902                                    Jane Corry     735220964   \n",
        "17003                                     Jan Karon     399183736   \n",
@@ -2193,7 +2193,7 @@
        "17406                                  Louise Penny    125002210X   \n",
        "17577                                 John Sandford     399176063   \n",
        "17621                                 Colleen Coble     718085760   \n",
-       "17633              Mary Higgins Clark Alafair Burke    150117164X   \n",
+       "17634              Mary Higgins Clark Alafair Burke    150117164X   \n",
        "\n",
        "                                                                        rtable_Name  \\\n",
        "2                                                                       Death's End   \n",
@@ -2229,7 +2229,7 @@
        "...                                                                             ...   \n",
        "15183                                                                SILENCE FALLEN   \n",
        "15308                                                          FINAL GIRLS: A NOVEL   \n",
-       "15332                                                       Order to Kill : A Novel   \n",
+       "15339                                                       Order to Kill : A Novel   \n",
        "15499                                                                    Metro 2033   \n",
        "15506                                                          The Lady of the Lake   \n",
        "15560                                                               No Game No Life   \n",
@@ -2245,7 +2245,7 @@
        "16560                                      Year One : Chronicles of the One, Book 1   \n",
        "16601                                                             The Light We Lost   \n",
        "16753                                          The Grave's a Fine and Private Place   \n",
-       "16770                                                             The City of Brass   \n",
+       "16779                                                             The City of Brass   \n",
        "16868                              Darker: Fifty Shades Darker as Told by Christian   \n",
        "16902                                                   My Husband's Wife : A Novel   \n",
        "17003                                                           To Be Where You Are   \n",
@@ -2256,7 +2256,7 @@
        "17406                                                       The Nature of the Beast   \n",
        "17577                                                                   Deep Freeze   \n",
        "17621                                                  The View from Rainshadow Bay   \n",
-       "17633                                                         Every Breath You Take   \n",
+       "17634                                                         Every Breath You Take   \n",
        "\n",
        "                               rtable_Author rtable_ISBN10  \n",
        "2                                  Cixin Liu     765386631  \n",
@@ -2292,7 +2292,7 @@
        "...                                      ...           ...  \n",
        "15183                        Patricia Briggs     425281280  \n",
        "15308                            Riley Sager    1101985380  \n",
-       "15332                 Kyle Mills Vince Flynn    1476783497  \n",
+       "15339                 Kyle Mills Vince Flynn    1476783497  \n",
        "15499                     Glukhovsky, Dmitry    1481845705  \n",
        "15506                      Andrzej Sapkowski    031627383X  \n",
        "15560                             Yuu Kamiya     316385263  \n",
@@ -2308,7 +2308,7 @@
        "16560                           Nora Roberts    1250122953  \n",
        "16601                         Jill Santopolo     735212767  \n",
        "16753                          Bradley, Alan     345539990  \n",
-       "16770                     Chakraborty, S. A.      62678108  \n",
+       "16779                     Chakraborty, S. A.      62678108  \n",
        "16868                            E. L. James     385543913  \n",
        "16902                             Jane Corry     735220964  \n",
        "17003                              Jan Karon     399183736  \n",
@@ -2319,7 +2319,7 @@
        "17406                           Louise Penny    125002210X  \n",
        "17577                          John Sandford     399176063  \n",
        "17621                         Coble, Colleen     718085760  \n",
-       "17633       Alafair Burke Mary Higgins Clark    150117164X  \n",
+       "17634       Alafair Burke Mary Higgins Clark    150117164X  \n",
        "\n",
        "[207 rows x 9 columns]"
       ]
@@ -3774,7 +3774,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "A['Name'] = A['Name'].astype('str') \n",
