--- a/deliverables/CODE/EM-workflow.ipynb
+++ b/deliverables/CODE/EM-workflow.ipynb
@@ -96,7 +96,7 @@
     "We are applying the following blockers to get rid of obvious non-matches\n",
     "1. Black box blocker: To ensure single word book Names are not pruned away by overlap blocker\n",
     "2. Overlap blocker : We use overlap blocker on Author and then Name  with overlap size 2\n",
-    "3. Rule-based blocker: We use rule-based blocker on Pages and Sale Price so that their absolute norm is less than 0.8"
+    "3. Rule-based blocker: We use rule-based blocker on Pages and Sale Price so that their absolute norm is less than a threshold"
    ]
   },
   {
@@ -395,7 +395,7 @@
    "source": [
     "### Sampling and labeling the candidate set\n",
     "First, we randomly sample 300 tuple pairs for labeling purposes.<br>\n",
-    "Next, we label the sampled candidate set. Specify we would enter 1 for a match and 0 for a non-match."
+    "Next, we label the sampled candidate set. We would enter 1 for a match and 0 for a non-match."
    ]
   },
   {
@@ -479,12 +479,12 @@
     "#### Creating features\n",
     "Next, we need to create a set of features for the development set. Using automatic feature generation in py_entitymatching, set of features F is generated based on the attributes in the input tables.\n",
     "\n",
-    "We removed features that take ‘id’, ‘Rating’ and ‘Dimensions’ as parameters from F as it does not contribute effectively to decide the matching between the tuple pairs in A and B"
+    "We removed features that take ‘id’, ‘Rating’ and ‘Dimensions’ as parameters from F as it does not contribute effectively to decide the matching between the tuple pairs in A and B. We also removed ‘ISBN’."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 153,
    "metadata": {
     "scrolled": true
    },
@@ -687,72 +687,53 @@
      "output_type": "stream",
      "text": [
       "Do you want to proceed? (y/n):y\n",
-      "0                     Name_Name_jac_qgm_3_qgm_3\n",
-      "1                 Name_Name_cos_dlm_dc0_dlm_dc0\n",
-      "2                 Name_Name_jac_dlm_dc0_dlm_dc0\n",
-      "3                                 Name_Name_mel\n",
-      "4                            Name_Name_lev_dist\n",
-      "5                             Name_Name_lev_sim\n",
-      "6                                 Name_Name_nmw\n",
-      "7                                  Name_Name_sw\n",
-      "8                     Sale_Price_Sale_Price_exm\n",
-      "9                     Sale_Price_Sale_Price_anm\n",
-      "10               Sale_Price_Sale_Price_lev_dist\n",
-      "11                Sale_Price_Sale_Price_lev_sim\n",
-      "12                Author_Author_jac_qgm_3_qgm_3\n",
-      "13            Author_Author_cos_dlm_dc0_dlm_dc0\n",
-      "14            Author_Author_jac_dlm_dc0_dlm_dc0\n",
-      "15                            Author_Author_mel\n",
-      "16                       Author_Author_lev_dist\n",
-      "17                        Author_Author_lev_sim\n",
-      "18                            Author_Author_nmw\n",
-      "19                             Author_Author_sw\n",
-      "20                       ISBN10_ISBN10_lev_dist\n",
-      "21                        ISBN10_ISBN10_lev_sim\n",
-      "22                            ISBN10_ISBN10_jar\n",
-      "23                            ISBN10_ISBN10_jwn\n",
-      "24                            ISBN10_ISBN10_exm\n",
-      "25                ISBN10_ISBN10_jac_qgm_3_qgm_3\n",
-      "26                              Pages_Pages_exm\n",
-      "27                              Pages_Pages_anm\n",
-      "28                         Pages_Pages_lev_dist\n",
-      "29                          Pages_Pages_lev_sim\n",
-      "30          Publisher_Publisher_jac_qgm_3_qgm_3\n",
-      "31      Publisher_Publisher_cos_dlm_dc0_dlm_dc0\n",
-      "32      Publisher_Publisher_jac_dlm_dc0_dlm_dc0\n",
-      "33                      Publisher_Publisher_mel\n",
-      "34                 Publisher_Publisher_lev_dist\n",
-      "35                  Publisher_Publisher_lev_sim\n",
-      "36                      Publisher_Publisher_nmw\n",
-      "37                       Publisher_Publisher_sw\n",
-      "38                   Language_Language_lev_dist\n",
-      "39                    Language_Language_lev_sim\n",
-      "40                        Language_Language_jar\n",
-      "41                        Language_Language_jwn\n",
-      "42                        Language_Language_exm\n",
-      "43            Language_Language_jac_qgm_3_qgm_3\n",
-      "44        Dimensions_Dimensions_jac_qgm_3_qgm_3\n",
-      "45    Dimensions_Dimensions_cos_dlm_dc0_dlm_dc0\n",
-      "46                    Dimensions_Dimensions_mel\n",
-      "47               Dimensions_Dimensions_lev_dist\n",
-      "48                Dimensions_Dimensions_lev_sim\n",
-      "49                            Rating_Rating_exm\n",
-      "50                            Rating_Rating_anm\n",
-      "51                       Rating_Rating_lev_dist\n",
-      "52                        Rating_Rating_lev_sim\n",
-      "53                                    id_id_exm\n",
-      "54                                    id_id_anm\n",
-      "55                               id_id_lev_dist\n",
-      "56                                id_id_lev_sim\n",
+      "0                   Name_Name_jac_qgm_3_qgm_3\n",
+      "1               Name_Name_cos_dlm_dc0_dlm_dc0\n",
+      "2               Name_Name_jac_dlm_dc0_dlm_dc0\n",
+      "3                               Name_Name_mel\n",
+      "4                          Name_Name_lev_dist\n",
+      "5                           Name_Name_lev_sim\n",
+      "6                               Name_Name_nmw\n",
+      "7                                Name_Name_sw\n",
+      "8                   Sale_Price_Sale_Price_exm\n",
+      "9                   Sale_Price_Sale_Price_anm\n",
+      "10             Sale_Price_Sale_Price_lev_dist\n",
+      "11              Sale_Price_Sale_Price_lev_sim\n",
+      "12              Author_Author_jac_qgm_3_qgm_3\n",
+      "13          Author_Author_cos_dlm_dc0_dlm_dc0\n",
+      "14          Author_Author_jac_dlm_dc0_dlm_dc0\n",
+      "15                          Author_Author_mel\n",
+      "16                     Author_Author_lev_dist\n",
+      "17                      Author_Author_lev_sim\n",
+      "18                          Author_Author_nmw\n",
+      "19                           Author_Author_sw\n",
+      "26                            Pages_Pages_exm\n",
+      "27                            Pages_Pages_anm\n",
+      "28                       Pages_Pages_lev_dist\n",
+      "29                        Pages_Pages_lev_sim\n",
+      "30        Publisher_Publisher_jac_qgm_3_qgm_3\n",
+      "31    Publisher_Publisher_cos_dlm_dc0_dlm_dc0\n",
+      "32    Publisher_Publisher_jac_dlm_dc0_dlm_dc0\n",
+      "33                    Publisher_Publisher_mel\n",
+      "34               Publisher_Publisher_lev_dist\n",
+      "35                Publisher_Publisher_lev_sim\n",
+      "36                    Publisher_Publisher_nmw\n",
+      "37                     Publisher_Publisher_sw\n",
+      "38                 Language_Language_lev_dist\n",
+      "39                  Language_Language_lev_sim\n",
+      "40                      Language_Language_jar\n",
+      "41                      Language_Language_jwn\n",
+      "42                      Language_Language_exm\n",
+      "43          Language_Language_jac_qgm_3_qgm_3\n",
       "Name: feature_name, dtype: object\n"
      ]
     }
    ],
    "source": [
     "F = em.get_features_for_matching(A, B)\n",
-    "print (F.feature_name)\n",
     "F = F.drop(F.index[[44,45,46,47,48,49,50,51,52,53,54,55,56]])\n",
-    "F = F.drop(F.index[[20,21,22,23,24,25]])"
+    "F = F.drop(F.index[[20,21,22,23,24,25]])\n",
+    "print (F.feature_name)"
    ]
   },
   {
@@ -1565,6 +1546,23 @@
     "        k=5,\n",
     "        target_attr='gold_labels', metric_to_select_matcher='f1', random_state=0)\n",
     "result['cv_stats']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Split H1 into P and Q\n",
+    "PQ = em.split_train_test(H1, train_proportion=0.5, random_state=0)\n",
+    "P = PQ['train']\n",
+    "Q = PQ['test']\n",
+    "em.vis_debug_rf(rf, P, Q, \n",
+    "        exclude_attrs=['_id', 'ltable_id', 'rtable_id', 'gold_labels'],\n",
+    "        target_attr='gold_labels')"
    ]
   },
   {
